fix some css alignments

--- a/src/components/ReactCarousel/ReactCarousel.module.css
+++ b/src/components/ReactCarousel/ReactCarousel.module.css
@@ -1,6 +1,5 @@
 /* Parent for ReactCarousel component */
 .sectionContainer {
-    width: 100%;
     background-color: #eaf3fc;
     padding: 40px 0;
     display: flex;
@@ -43,8 +42,11 @@
     display: flex;
     align-items: center;
     flex-wrap: nowrap;
-    min-width: 180px;
     gap: var(--spacing-sm);
+}
+
+.noLink {
+    justify-content: flex-end;
 }
 
 /* Carousel container */
