--- a/src/theme/DocCategoryGeneratedIndexPage/styles.module.css
+++ b/src/theme/DocCategoryGeneratedIndexPage/styles.module.css
@@ -46,6 +46,10 @@
     visibility: hidden;
 }
 
+.exploreAllWrapper {
+    align-items: center;
+}
+
 .pageHeader {
     width: 100%;
     margin-bottom: var(--spacing-xl);
@@ -180,7 +184,6 @@
     .mainContent {
         max-width: 100vw;
         padding: 0 1px;
-        gap: var(--spacing-xs);
     }
 
     .title {
